[package]
name = "nalgang-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
serenity = {version = "0.11.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "time", "cache"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
dotenv = { version="0.15.0"}